--- a/manuscriptsubmission.html
+++ b/manuscriptsubmission.html
@@ -33,16 +33,16 @@
           <img style="height: 45px;" src="images/NITJSRNEWLOG.png" alt="logo" class="mb-1 mx-auto img-fluid" width="400" height="40">
         </a>
         <a target="_blank" href="https://ieeenitjsr.netlify.app/">
-          <img style="height: 45px;" src="images/nitiee.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="55">
+          <img style="height: 45px;" src="images/nitlogosc.png" alt="logo" class="mb-1 mx-auto img-fluid" width="70" height="45">
         </a>
         <!-- <a href="index.html">
           <img style="height: 55px;" src="images/nitj.jpg" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a> -->
         <a target="_blank" href="https://ewh.ieee.org/r10/calcutta/">
-          <img style="height: 45px;" src="images/IEEEKSpng.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+          <img style="height: 45px;" src="images/IEEEkol.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a>
         <a target="_blank" href="https://www.ieee.org/">
-          <img style="height: 45px;" src="images/IEEELOGO.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+          <img style="height: 45px;" src="images/ieeen.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a>
       </div>
     </div>
@@ -123,9 +123,52 @@
 
   <main class="container mx-auto p-12">
     <h1 class="text-4xl font-bold mb-4 mt-40">Manuscript Submission</h1>
+  </div>
+  <p style="font-weight: normal; color:black;font-size: 16px; text-align:justify">
+    Prospective authors are invited to electronically submit regular papers of their work in English. Submit the full paper using the following layout. Limitation to 6 full pages, including paper title, authors and affiliations, figures, and references (maximum size 2MB). Up to 2 additional pages are allowed, each additional page incurs a fee of $ 150 per page and a full paper can have a maximum of 8 pages including the additional pages. Authors are requested to prepare the manuscripts in the IEEE two-column format template and to translate it in PDF. No other format in the submission and in the final version can be accepted. The IEEE two-column format template can be downloaded from this <a href="https://www.ieee.org/conferences/publishing/templates.html" class="text-blue-500 hover:underline">link</a>.  
+  </p>
+  <p style="font-weight: normal; color:black;font-size: 16px; text-align:justify">
+    Accepted and presented papers will be published in the conference proceedings, and submitted for inclusion in IEEE Xplore on‐line digital library.</a>.  
+  </p>
+  
+  <h1 class="text-4xl font-bold mb-4 mt-10">Final Paper Submission Instructions</h1>
+  <p style="font-weight: normal; color:black;font-size: 16px; text-align:justify">
+    Before you can register your paper you should register to the new conference management system. If you haven't registered yet, please register at:   
+  </p>
+  <p style="font-weight: normal; color:black;font-size: 16px; text-align:justify">
+    As part of the registration process, you will receive a confirmation email for you to activate your account.
+  </p>
+  <p style="font-weight: bold; color:rgb(214, 70, 34);font-size: 16px; text-align:justify">
+    Before Creating a PDF
+  </p>
+  <p style="font-weight: normal; color:black;font-size: 16px; text-align:justify">
+    Proofread your source document thoroughly to confirm that it will require no revision.
+  </p>
+  <p style="font-weight: bold; color:rgb(214, 70, 34);font-size: 16px; text-align:justify">
+    Creating your PDF eXpress Account
+  </p>
+  Log in to the IEEE PDF eXpress TM site
+
+  First-time users should do the following:
+  
+  1. Select the New Users - Click Here link.
+  
+  2. Enter the following:
+  
+      55916X for the Conference ID
+  
+      Your email address
+  
+      A password
+  
+  3. Continue to enter information as prompted. An Online confirmation will be displayed and an email confirmation will be sent verifying your account setup.
+
+</div>
+    <h2 class="text-2xl font-normal mb-2 mt-8"></h2>
     <ol class="list-decimal pl-5 space-y-2">
       <li>Prepare your manuscript according to the guidelines provided.</li>
       <li>Submit your manuscript through the <a href="https://cmt3.research.microsoft.com/ICE2CPT2025" class="text-blue-500 hover:underline">online submission portal</a>.</li>
+      <li>Download IEEE Template <a href="https://www.ieee.org/conferences/publishing/templates.html" class="text-blue-500 hover:underline">IEEE Official Website</a>.</li>
       <li>Ensure all required documents are included in the submission.</li>
     </ol>
     <p class="mt-4">For more details, contact <a href="mailto:suryaprakash.ee@nitjsr.ac.in" class="text-blue-500 hover:underline">suryaprakash.ee@nitjsr.ac.in</a>, <a href="mailto:krnishant125@gmail.com" class="text-blue-500 hover:underline">krnishant125@gmail.com</a>.</p>
