--- a/awards.html
+++ b/awards.html
@@ -33,16 +33,16 @@
           <img style="height: 45px;" src="images/NITJSRNEWLOG.png" alt="logo" class="mb-1 mx-auto img-fluid" width="400" height="40">
         </a>
         <a target="_blank" href="https://ieeenitjsr.netlify.app/">
-          <img style="height: 45px;" src="images/nitiee.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="55">
+          <img style="height: 45px;" src="images/nitlogosc.png" alt="logo" class="mb-1 mx-auto img-fluid" width="70" height="45">
         </a>
         <!-- <a href="index.html">
           <img style="height: 55px;" src="images/nitj.jpg" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a> -->
         <a target="_blank" href="https://ewh.ieee.org/r10/calcutta/">
-          <img style="height: 45px;" src="images/IEEEKSpng.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+          <img style="height: 45px;" src="images/IEEEkol.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a>
         <a target="_blank" href="https://www.ieee.org/">
-          <img style="height: 45px;" src="images/IEEELOGO.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+          <img style="height: 45px;" src="images/ieeen.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a>
       </div>
     </div>
