--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
         <!-- <div class="detail-box"> -->
         <div class="heading_container" id="venue">
           <a target="_blank" href="https://nitjsr.ac.in/departments/eee#:~:text=The%20Department%20of%20Electrical%20Engineering%20was%20started%20in,well%20placed%20in%20both%20public%20and%20private%20sectors.">
-            <img style="height: 300px;" src="images/EEN.jpg" alt="logo" class="mb-1 mx-auto img-fluid" width="800" height="300">
+            <img style="height: 300px;" src="images/EEN.png" alt="logo" class="mb-1 mx-auto img-fluid" width="800" height="300">
           </a>
           
         </div>
