--- a/sponsorship.html
+++ b/sponsorship.html
@@ -150,7 +150,7 @@
             </p>
             <p class="text-gray-600 max-w-3xl mx-auto">
               <h1 class="text-lg bg-yellow-300 text-green py-2 font-bold rounded-md">Sponsorship Benifits at Glance</h1>
-              <img class="d-block img-fluid w-200 my-2 mx-auto border h-75 rounded p-3 py-2" src="images/Sponsor.jpg" >
+              <img class="d-block img-fluid w-200 my-2 mx-auto border h-75 rounded p-3 py-2" src="" >
   
             </div>
         </section>
