--- a/callforpapers.html
+++ b/callforpapers.html
@@ -129,13 +129,13 @@
     <p class="mb-4">The conference invites high-quality research contributions in all areas of Electrical, Electronics, and Computer Science. Topics of interest include, but are not limited to:</p>
     <ul class="list-disc pl-5 space-y-2">
      
-      <li>Smart Power Systems, Electric Vehicles, and Energy Management</li>
-      <li>Advanced Robotics, Autonomous Systems, and Control Technologies</li>
-      <li>Renewable Energy Systems, Solar Power, and Grid Integration</li>
-      <li>Wireless Communication, IoT, and Next-Generation Networks</li>
-      <li>Electromagnetic and Wireless Technologies</li>
-      <li>Cybersecurity, Blockchain, and Quantum Computing for Secure Systems</li>
-      <li>Artificial Intelligence, Machine Learning, and Computer Vision</li>
+      <li>Track 1: Emerging Technologies in VLSI, Microwave, Sensors, and Embedded Systems.</li>
+      <li>Track 2: Advanced Communication and Signal Processing Technologies.</li>
+      <li>Track 3: Computing Technologies and High-Performance Systems.</li>
+      <li>Track 4: Advanced Power Converters for Electric Vehicles, Motor Control, and On-Board & Off-Board Charging Systems.</li>
+      <li>Track 5: Applications of Smart Grid, Power System Control, and Renewable Integration.</li>
+      <li>Track 6: Advanced Robotics, Autonomous Systems, and Advanced Control Technologies.</li>
+      <li>Track 7: Applications of AI, Machine Learning, and Data Science in Interdisciplinary Domains.</li>
    
     </ul>
     <p class="mt-4">Submit your paper by <strong>30th June 2025</strong>.</p>
