--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     <div class="marquee-content">
       <a href="https://cmt3.research.microsoft.com/ICE2CPT2025">Click Here for Paper Submission</a> 
         &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-        <a href="CSSF.pdf">Click Here for Special Session Proposal</a>
+        <a href="CSSP.docx">Click Here for Special Session Proposal</a>
         &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
         <a href="SST.docx">Click Here to download Special Session Template</a>
     </div>
