--- a/index.html
+++ b/index.html
@@ -269,6 +269,8 @@
         <a href="CSSP.docx">Click Here for Special Session Proposal</a>
         &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
         <a href="SST.docx">Click Here to download Special Session Template</a>
+        &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+        <a href="Call for Papers ICE2CPT 2025.pdf">Click Here to Call for Papers Brochure </a>
     </div>
 </div>
 
