--- a/internationaladvisory.html
+++ b/internationaladvisory.html
@@ -169,9 +169,20 @@
         <h2 class="text-lg font-bold">Walter D. Downing, P.E. (“Walt”)</h2>
         <p class="text-sm text-gray-600">Executive Vice President and Chief Operating Officer of Southwest Research Institute (SwRI®) in San Antonio, Texas</p>
         <p class="text-sm text-gray-600">Past Presidents, IEEE Systems Council</p>
-      
       </div>
       
+      <div class="p-4 bg-white shadow-md rounded-lg text-center">
+        <img src="images/Frede.jpg" alt="Committee Member 3" class="w-50 h-30 mx-auto rounded-full mb-2 img-fluid">
+        <h2 class="text-lg font-bold">Prof. Frede Blaabjerg</h2>
+        <p class="text-sm text-gray-600">AAU Energy</p>
+      </div>
+
+      <div class="p-4 bg-white shadow-md rounded-lg text-center">
+        <img src="images/Satish.png" alt="Committee Member 3" class="w-50 h-30 mx-auto rounded-full mb-2 img-fluid">
+        <h2 class="text-lg font-bold">Prof. Satish Sharma</h2>
+        <p class="text-sm text-gray-600">San Diego State University</p>
+      </div>
+
     </div>
   </main>
   
