--- a/internationaladvisory.html
+++ b/internationaladvisory.html
@@ -183,6 +183,11 @@
         <p class="text-sm text-gray-600">San Diego State University</p>
       </div>
 
+      <div class="p-4 bg-white shadow-md rounded-lg text-center">
+        <img src="images/mahesh.jpg" alt="Committee Member 3" class="w-50 h-30 mx-auto rounded-full mb-2 img-fluid">
+        <h2 class="text-lg font-bold">Prof. Mahesh Kumar</h2>
+        <p class="text-sm text-gray-600">Indian Institute of Technology, Jodhpur</p>
+      </div>
     </div>
   </main>
   
