--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
     <div class="marquee-content">
       <a href="https://cmt3.research.microsoft.com/ICE2CPT2025">Click Here for Paper Submission</a> 
         &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-        <a href="CSSP.docx">Click Here for Special Session Proposal</a>
+        <a href="SSP.pdf">Click Here for Special Session Proposal</a>
         &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-        <a href="SST.docx">Click Here to download Special Session Template</a>
+        <a href="SSPT.docx">Click Here to download Special Session Template</a>
         &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
         <a href="Call for Papers ICE2CPT 2025.pdf">Click Here to Call for Papers Brochure </a>
     </div>
