--- a/manuscriptsubmission.html
+++ b/manuscriptsubmission.html
@@ -131,7 +131,7 @@
     Prospective authors are invited to electronically submit regular papers of their work in English. Submit the full paper using the following layout. Limitation to 6 full pages, including paper title, authors and affiliations, figures, and references (maximum size 2MB). Up to 2 additional pages are allowed, each additional page incurs a fee of $ 150 per page and a full paper can have a maximum of 8 pages including the additional pages. Authors are requested to prepare the manuscripts in the IEEE two-column format template and to translate it in PDF. No other format in the submission and in the final version can be accepted. The IEEE two-column format template can be downloaded from this <a href="https://www.ieee.org/conferences/publishing/templates.html" class="text-blue-500 hover:underline">link</a>.  
   </p>
   <p style="font-weight: normal; color:black;font-size: 16px; text-align:justify">
-    Accepted and presented papers will be published in the conference proceedings, and submitted for inclusion in IEEE Xplore on‐line digital library.</a>.  
+    Accepted and presented papers will be published in the conference proceedings, and submitted for inclusion in IEEE Xplore on‐line digital library.</a>  
   </p>
   
   <h1 class="text-4xl font-bold mb-4 mt-10">Final Paper Submission Instructions</h1>
@@ -174,7 +174,7 @@
       <li>Download IEEE Template <a href="https://www.ieee.org/conferences/publishing/templates.html" class="text-blue-500 hover:underline">IEEE Official Website</a>.</li>
       <li>Ensure all required documents are included in the submission.</li>
     </ol>
-    <p class="mt-4">For more details, contact <a href="mailto:suryaprakash.ee@nitjsr.ac.in" class="text-blue-500 hover:underline">suryaprakash.ee@nitjsr.ac.in</a>, <a href="mailto:krnishant125@gmail.com" class="text-blue-500 hover:underline">krnishant125@gmail.com</a>.</p>
+    <p class="mt-4">For more details, contact <a href="mailto:ice2cpt@gmail.com" class="text-blue-500 hover:underline">ice2cpt@gmail.com</a>, <a href="mailto:suryaprakash.ee@nitjsr.ac.in" class="text-blue-500 hover:underline">suryaprakash.ee@nitjsr.ac.in</a>, <a href="mailto:krnishant125@gmail.com" class="text-blue-500 hover:underline">krnishant125@gmail.com</a>.</p>
   </main>
   
  <!-- Footer-->
