--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -142,6 +142,14 @@
         <p class="text-sm text-gray-600"><b>Deputy Director, NIT, Jamshedpur</b></p>
       </div>
 
+    </div>
+  </main>
+
+  <main class="container mx-auto p-4">
+    <h3 class="text-2xl font-bold mb-3 mt-10">Convenor</h3>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+  
+
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
         <img src="images/Madhu.png" alt="Member 1" class="w-50 h-30 mx-auto rounded-full mb-2 img-fluid">
         <h2 class="text-lg font-bold">Dr. Madhu Singh</h2>
@@ -150,6 +158,7 @@
       </div>
     </div>
   </main>
+
 
   <main class="container mx-auto p-4">
     <h3 class="text-2xl font-bold mb-3 mt-10">Honorary Chairs</h3>
@@ -188,7 +197,7 @@
   </main>
 
   <main class="container mx-auto p-4">
-    <h3 class="text-2xl font-bold mb-3 mt-10">Conference Organising Chairs </h3>
+    <h3 class="text-2xl font-bold mb-3 mt-10">Organising Chairs </h3>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
       
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
@@ -197,11 +206,6 @@
         <p class="text-sm text-gray-600"><b>Professor, NIT Jamshedpur</b></p>
       </div>
 
-      <div class="p-4 bg-white shadow-md rounded-lg text-center">
-        <img src="images/nam.png" alt="Member 2" class="w-50 h-30 mx-auto rounded-full mb-2 img-fluid">
-        <h2 class="text-lg font-bold">Dr. Kumari Namrata</h2>
-        <p class="text-sm text-gray-600"><b>Associate Professor, NIT Jamshedpur</b></p>
-      </div>
 
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
         <img src="images/skc.png" alt="Member 1" class="w-50 h-30 mx-auto rounded-full mb-2 img-fluid">
@@ -212,9 +216,15 @@
   </main>
 
   <main class="container mx-auto p-4">
-    <h3 class="text-2xl font-bold mb-3 mt-10">Conference Secretaries</h3>
+    <h3 class="text-2xl font-bold mb-3 mt-10">Organizing Secretaries</h3>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
       
+      <div class="p-4 bg-white shadow-md rounded-lg text-center">
+        <img src="images/nam.png" alt="Member 2" class="w-50 h-30 mx-auto rounded-full mb-2 img-fluid">
+        <h2 class="text-lg font-bold">Dr. Kumari Namrata</h2>
+        <p class="text-sm text-gray-600"><b>Associate Professor, NIT Jamshedpur</b></p>
+      </div>
+
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
         <img src="images/jitu.png" alt="Member 1" class="w-50 h-30 mx-auto rounded-full mb-2 img-fluid">
         <h2 class="text-lg font-bold">Dr. Jitendra Kumar</h2>
