--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 
 
 
-  <!-- Visitor counter-->
+  <!-- Visitor counter
   <div class="heading_container" id="venue">
   <section class="about_section layout_padding mt-5">
     <div class="container ">
@@ -560,7 +560,7 @@
       </div>
     </div>
   </section>
-</div>
+</div>-->
 
 
 
