--- a/sponsorship.html
+++ b/sponsorship.html
@@ -152,7 +152,7 @@
               We invite various companies/research organization/Academic Institutes to become Sponsors of 1st IEEE International Conference on Electrical, Electronics And Computer Science With Advance Power Technologies- A Future Trend (ICE2CPT) that is to be organized by the Department of Electrical Engineering, National Institute of Technology Jamshedpur, Jharkhand, India during 29th to 31st October, 2025.
             </p>
             <p class="text-gray-600 max-w-3xl mx-auto">
-              <h1 class="text-lg bg-yellow-300 text-green py-2 font-bold rounded-md">Sponsorship Benifits at Glance</h1>
+              <h1 class="text-lg bg-yellow-300 text-green py-2 font-bold rounded-md">Sponsorship benefits at Glance</h1>
               <img class="d-block img-fluid w-200 my-2 mx-auto border h-75 rounded p-3 py-2" src="images/sponsor.jpg" >
   
             </div>
