--- a/internationaladvisory.html
+++ b/internationaladvisory.html
@@ -162,7 +162,7 @@
       </div>
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
         <img src="images/GC.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
-        <h2 class="text-lg font-bold">Goutam Chattopadhyay</h2>
+        <h2 class="text-lg font-bold">Dr. Goutam Chattopadhyay</h2>
         <p class="text-sm text-gray-600">Senior Scientist, NASA-JPL, Caltech/IEEE Fellow/President, IEEE MTT-S</p>
       </div>
 
@@ -204,6 +204,24 @@
         <p class="text-sm text-gray-600">Advisor Liaison IEEE Bombay Section</p>
         <p class="text-sm text-gray-600">Senior Director and Professor Atlas SkillTech University Mumbai India</p>
       </div>
+
+      <div class="p-4 bg-white shadow-md rounded-lg text-center">
+        <img src="images/KM.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+        <h2 class="text-lg font-bold">Prof. Kashem Muttaqi</h2>
+        <p class="text-sm text-gray-600">University of Wollongong, Australia</p>
+          </div>
+
+          <div class="p-4 bg-white shadow-md rounded-lg text-center">
+            <img src="images/BP.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+            <h2 class="text-lg font-bold">Prof. Bikash Pal</h2>
+            <p class="text-sm text-gray-600">Imperial College London, London </p>
+              </div>
+
+              <div class="p-4 bg-white shadow-md rounded-lg text-center">
+                <img src="images/RBP.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+                <h2 class="text-lg font-bold">Prof.(HAG) Ram Bilas Pachori</h2>
+                <p class="text-sm text-gray-600">Indian Institute of Technology (IIT) Indore, India </p>
+                  </div>
     </div>
   </main>
   
