--- a/internationaladvisory.html
+++ b/internationaladvisory.html
@@ -222,6 +222,38 @@
                 <h2 class="text-lg font-bold">Prof.(HAG) Ram Bilas Pachori</h2>
                 <p class="text-sm text-gray-600">Indian Institute of Technology (IIT) Indore, India </p>
                   </div>
+                  <div class="p-4 bg-white shadow-md rounded-lg text-center">
+                    <img src="images/SC.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+                    <h2 class="text-lg font-bold">Prof. Sivaji Chakravorti                    </h2>
+                    <p class="text-sm text-gray-600">Indian National Academy of Engineering (INAE) President,
+                      Jadavpur University, Kolkata</p>
+                      <p class="text-sm text-gray-600">Indian Institute of Technology (IIT) Indore, India </p>
+                      </div>
+                      <div class="p-4 bg-white shadow-md rounded-lg text-center">
+                        <img src="images/DWK.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+                        <h2 class="text-lg font-bold">Prof. Dong-Won Kang</h2>
+                        <p class="text-sm text-gray-600">Chung-Ang University, Rep. of Korea</p>
+                          </div>
+                          <div class="p-4 bg-white shadow-md rounded-lg text-center">
+                            <img src="images/SMS.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+                            <h2 class="text-lg font-bold">Prof. S. M. Sameer</h2>
+                            <p class="text-sm text-gray-600">National Institute of Technology Calicut, India</p>
+                              </div>
+                              <div class="p-4 bg-white shadow-md rounded-lg text-center">
+                                <img src="images/JA.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+                                <h2 class="text-lg font-bold">Prof. Jyotika Athavale</h2>
+                                <p class="text-sm text-gray-600">2024 IEEE Computer Society President</p>
+                                  </div>
+                                  <div class="p-4 bg-white shadow-md rounded-lg text-center">
+                                    <img src="images/RB.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+                                    <h2 class="text-lg font-bold">Prof. Ramesh Bansal</h2>
+                                    <p class="text-sm text-gray-600">University of Sharjah, Sharjah, UAE</p>
+                                      </div>
+                                      <div class="p-4 bg-white shadow-md rounded-lg text-center">
+                                        <img src="images/RK.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+                                        <h2 class="text-lg font-bold">Prof. Ramakrishna Kappagantu</h2>
+                                        <p class="text-sm text-gray-600">Secretary, IEEE PES</p>
+                                          </div>
     </div>
   </main>
   
