--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <li class="nav-item dropdown text-white">
               <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Committee</a>
               <ul class="dropdown-menu" aria-labelledby="pages">
-                <li><a href="internationaladvisory.html" class="dropdown-item">International Advisory Committee</a></li>
+                <li><a href="internationaladvisory.html" class="dropdown-item">Advisory Committee</a></li>
                 <li><a href="organizingcommittee.html" class="dropdown-item">Organizing Committee</a></li>
                 <li><a href="technicalprogramcommittee.html" class="dropdown-item">Technical Program Committee</a></li>
                </ul>
