--- a/internationaladvisory.html
+++ b/internationaladvisory.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>International Advisory Committee</title>
+    <title>Advisory Committee</title>
      <meta charset="utf-8">
   <link rel="icon" href="images/logo1.png" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -82,7 +82,7 @@
             <li class="nav-item dropdown text-white">
               <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Committee</a>
               <ul class="dropdown-menu" aria-labelledby="pages">
-                <li><a href="internationaladvisory.html" class="dropdown-item">International Advisory Committee</a></li>
+                <li><a href="internationaladvisory.html" class="dropdown-item">Advisory Committee</a></li>
                 <li><a href="organizingcommittee.html" class="dropdown-item">Organizing Committee</a></li>
                 <li><a href="technicalprogramcommittee.html" class="dropdown-item">Technical Program Committee</a></li>
                </ul>
@@ -133,37 +133,35 @@
   
   <!-- Main Content -->
   <main class="container mx-auto p-6">
-    <h1 class="text-4xl font-bold mb-4 mt-48">International Advisory Committee</h1>
-    <p class="mb-6">Meet the distinguished members of our International Advisory Committee who play a key role in shaping the content and structure of the conference.</p>
+    <h1 class="text-4xl font-bold mb-4 mt-48">Advisory Committee</h1>
+    <p class="mb-6">Meet the distinguished members of our International and National Advisory Committee who play a key role in shaping the content and structure of the conference.</p>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
         <img src="images/Andy.png" alt="Committee Member 1" class="w-40 h-40 mx-auto rounded-full mb-2 img-fluid">
         <h2 class="text-lg font-bold">Prof. Andy Chen</h2>
-        <p class="text-sm text-gray-600">IEEE Systems Council 2025 President, President & CEO, Catronic Enterprise, Canada
-        </p>
+        <p class="text-sm text-gray-600">IEEE Systems Council 2025 President</p>
       </div>
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
         <img src="images/Hironori.png" alt="Committee Member 2" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
         <h2 class="text-lg font-bold">Prof. Hironori Washizaki</h2>
-        <p class="text-sm text-gray-600">IEEE Computer Society 2025 President, Waseda University</p>
+        <p class="text-sm text-gray-600">IEEE Computer Society 2025 President</p>
       </div>
       
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
         <img src="images/Walt.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
         <h2 class="text-lg font-bold">Walter D. Downing</h2>
         <p class="text-sm text-gray-600">Past Presidents, IEEE Systems Council</p>
-        <p class="text-sm text-gray-600">Executive VP & COO SwRI®, San Antonio, Texas</p>
         </div>
 
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
         <img src="images/Atif.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
-        <h2 class="text-lg font-bold">Prof. ATIF IQBAL</h2>
-        <p class="text-sm text-gray-600">Department of Electrical Engineering, Qatar University, Doha, Qatar</p>
+        <h2 class="text-lg font-bold">Prof. Atif Iqbal</h2>
+        <p class="text-sm text-gray-600"> Qatar University, Doha, Qatar</p>
       </div>
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
         <img src="images/GC.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
         <h2 class="text-lg font-bold">Dr. Goutam Chattopadhyay</h2>
-        <p class="text-sm text-gray-600">Senior Scientist, NASA-JPL, Caltech/IEEE Fellow/President, IEEE MTT-S</p>
+        <p class="text-sm text-gray-600">Senior Scientist, NASA-JPL, President, IEEE MTT-S</p>
       </div>
 
 
@@ -195,16 +193,32 @@
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
         <img src="images/SN.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
         <h2 class="text-lg font-bold">Prof. Sri Niwas Singh</h2>
-        <p class="text-sm text-gray-600">Director, Atal Bihari Vajpayee- Indian Institute of Information Technology and Management (ABV-IIITM), Gwalior, India</p>
+        <p class="text-sm text-gray-600">Director, ABV-IIITM, Gwalior, India</p>
       </div>
 
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
         <img src="images/IMG_7959.JPG" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
         <h2 class="text-lg font-bold">Dr. Shashikant Patil</h2>
-        <p class="text-sm text-gray-600">Advisor Liaison IEEE Bombay Section</p>
-        <p class="text-sm text-gray-600">Senior Director and Professor Atlas SkillTech University Mumbai India</p>
-      </div>
+        <p class="text-sm text-gray-600">Advisor Liaison IEEE Bombay Section India</p>
+         </div>
 
+         <div class="p-4 bg-white shadow-md rounded-lg text-center">
+          <img src="images/JMC.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+          <h2 class="text-lg font-bold">Prof. Josep M. Guerrero</h2>
+          <p class="text-sm text-gray-600">COREM, Huanjiang Laboratory, Zhejiang University, China</p>
+           </div>
+
+           <div class="p-4 bg-white shadow-md rounded-lg text-center">
+            <img src="images/EK.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+            <h2 class="text-lg font-bold">Prof. Ersan Kabalcı</h2>
+            <p class="text-sm text-gray-600">Nevsehir Haci Bektas Veli University, Nevsehir-Turkey</p>
+             </div>
+             
+             <div class="p-4 bg-white shadow-md rounded-lg text-center">
+              <img src="images/FB.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+              <h2 class="text-lg font-bold">Prof. Francesco Benedetto</h2>
+              <p class="text-sm text-gray-600">University of ROMA TRE, Italy</p>
+               </div>
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
         <img src="images/KM.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
         <h2 class="text-lg font-bold">Prof. Kashem Muttaqi</h2>
@@ -225,10 +239,8 @@
                   <div class="p-4 bg-white shadow-md rounded-lg text-center">
                     <img src="images/SC.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
                     <h2 class="text-lg font-bold">Prof. Sivaji Chakravorti                    </h2>
-                    <p class="text-sm text-gray-600">Indian National Academy of Engineering (INAE) President,
-                      Jadavpur University, Kolkata</p>
-                      <p class="text-sm text-gray-600">Indian Institute of Technology (IIT) Indore, India </p>
-                      </div>
+                    <p class="text-sm text-gray-600">INAE President,Jadavpur University, Kolkata</p>
+                    </div>
                       <div class="p-4 bg-white shadow-md rounded-lg text-center">
                         <img src="images/DWK.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
                         <h2 class="text-lg font-bold">Prof. Dong-Won Kang</h2>
