--- a/technicalprogramcommittee.html
+++ b/technicalprogramcommittee.html
@@ -80,7 +80,7 @@
             <li class="nav-item dropdown text-white">
               <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Committee</a>
               <ul class="dropdown-menu" aria-labelledby="pages">
-                <li><a href="internationaladvisory.html" class="dropdown-item">International Advisory Committee</a></li>
+                <li><a href="internationaladvisory.html" class="dropdown-item">Advisory Committee</a></li>
                 <li><a href="organizingcommittee.html" class="dropdown-item">Organizing Committee</a></li>
                 <li><a href="technicalprogramcommittee.html" class="dropdown-item">Technical Program Committee</a></li>
                </ul>
@@ -151,6 +151,13 @@
               <td>Prince Sultan University </td>
             </tr>
             <tr>
+              <tr>
+                <td> Dil Khush Meena</td>
+                <td>University of New South Wales Sydney, Australia </td>
+              </tr>
+              <tr>
+
+             
               <td>Dr.R.Aiyshwariya Devi </td>
               <td> R.M.K. College Of Engineering and Technology </td>
             </tr>
