--- a/internationaladvisory.html
+++ b/internationaladvisory.html
@@ -54,7 +54,7 @@
           <img style="height: 45px;" src="images/ieeen.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a>
         <a target="_blank" href="https://www.ieee.org/">
-          <img style="height: 45px;" src="images/ies.png" alt="logo" class="mb-1 mx-auto img-fluid" width="80" height="45">
+          <img style="height: 45px;" src="images/ies.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="45">
         </a>
       </div>
     </div>
@@ -205,7 +205,7 @@
          <div class="p-4 bg-white shadow-md rounded-lg text-center">
           <img src="images/JMC.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
           <h2 class="text-lg font-bold">Prof. Josep M. Guerrero</h2>
-          <p class="text-sm text-gray-600">COREM, Huanjiang Laboratory, Zhejiang University, China</p>
+          <p class="text-sm text-gray-600">Huanjiang Laboratory, Zhejiang University, China</p>
            </div>
 
            <div class="p-4 bg-white shadow-md rounded-lg text-center">
