--- a/internationaladvisory.html
+++ b/internationaladvisory.html
@@ -238,8 +238,8 @@
                   </div>
                   <div class="p-4 bg-white shadow-md rounded-lg text-center">
                     <img src="images/SC.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
-                    <h2 class="text-lg font-bold">Prof. Sivaji Chakravorti                    </h2>
-                    <p class="text-sm text-gray-600">INAE President,Jadavpur University, Kolkata</p>
+                    <h2 class="text-lg font-bold">Prof. Sivaji Chakravorti</h2>
+                    <p class="text-sm text-gray-600">INAE President, Jadavpur University, Kolkata</p>
                     </div>
                       <div class="p-4 bg-white shadow-md rounded-lg text-center">
                         <img src="images/DWK.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
@@ -266,6 +266,16 @@
                                         <h2 class="text-lg font-bold">Prof. Ramakrishna Kappagantu</h2>
                                         <p class="text-sm text-gray-600">Secretary, IEEE PES</p>
                                           </div>
+                                          <div class="p-4 bg-white shadow-md rounded-lg text-center">
+                                            <img src="images/GS.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+                                            <h2 class="text-lg font-bold">Prof. Gautam Srivastava</h2>
+                                            <p class="text-sm text-gray-600">Brandon University, Canada</p>
+                                              </div>
+                                              <div class="p-4 bg-white shadow-md rounded-lg text-center">
+                                                <img src="images/PW.png" alt="Committee Member 3" class="w-30 h-40 mx-auto rounded-full mb-2 img-fluid">
+                                                <h2 class="text-lg font-bold">Prof. Pat Wheeler</h2>
+                                                <p class="text-sm text-gray-600">University of Nottingham, England</p>
+                                                  </div>
     </div>
   </main>
   
