--- a/registrationdetails.html
+++ b/registrationdetails.html
@@ -175,34 +175,34 @@
                                   <tr>
                                       <th scope="row">1</th>
                                       <td>Author Non-IEEE Member</td>
-                                      <td>₹7500</td>
-                                      <td>$260</td>
-                                      <td>₹8500</td>
-                                      <td>$290</td>
+                                      <td>₹8000</td>
+                                      <td>$300</td>
+                                      <td>₹9000</td>
+                                      <td>$3300</td>
                                   </tr>
                                   <tr>
                                       <th scope="row">2</th>
                                       <td>Author IEEE Member</td>
-                                      <td>₹6000</td>
-                                      <td>$210</td>
-                                      <td>₹7000</td>
-                                      <td>$230</td>
+                                      <td>₹6500</td>
+                                      <td>$250</td>
+                                      <td>₹7500</td>
+                                      <td>$270</td>
                                   </tr>
                                   <tr>
                                       <th scope="row">3</th>
                                       <td>Student Non- IEEE Member</td>
-                                      <td>₹5500</td>
-                                      <td>$190</td>
-                                      <td>₹6500</td>
-                                      <td>$205</td>
+                                      <td>₹6000</td>
+                                      <td>$230</td>
+                                      <td>₹7000</td>
+                                      <td>$245</td>
                                   </tr>
                                   <tr>
                                       <th scope="row">4</th>
                                       <td>IEEE Student Member </td>
-                                      <td>₹4500</td>
-                                      <td>$155</td>
-                                      <td>₹5500</td>
-                                      <td>$170</td>
+                                      <td>₹5000</td>
+                                      <td>$195</td>
+                                      <td>₹600</td>
+                                      <td>$210</td>
                                   </tr>
                                   <tr>
                                       <th scope="row">5</th>
@@ -223,7 +223,8 @@
                               </tbody>
                           </table>
                           <ul class="list-disc pl-5 space-y-2">
-                              <li>Receipt will be provided in the name of registered author only.</li>
+                            <li>Rates are inclusive of GST 18%</li>  
+                            <li>Receipt will be provided in the name of registered author only.</li>
                               <li>Any one of the authors/co-authors can present the accepted paper.</li>
                               <li>The authors can pay the conference registration fee through NEFT/ RTGS/
                                   IMPS/ Direct Deposit/ Swift Transfer to the following bank account.</li>
