--- a/internationaladvisory.html
+++ b/internationaladvisory.html
@@ -287,7 +287,7 @@
               <span class="mx-1">&middot;</span>
               <a href="./about.html">About Us</a>
               <span class="mx-1">&middot;</span>
-              <a href="./contact.html">Contact Us</a>
+              <a href="./venue.html">Key Attractions</a>
               <span class="mx-1">&middot;</span>
               <a href="https://nitjsr.ac.in/" target="_blank" rel="noreferrer nofollow">NITJSR Website</a>
               <hr>
