--- a/index.html
+++ b/index.html
@@ -131,8 +131,11 @@
         <a target="_blank" href="https://www.ieee.org/">
           <img style="height: 45px;" src="images/ieeen.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a>
-        <a target="_blank" href="https://www.ieee.org/">
+        <a target="_blank" href="https://www.ieee-ies.org/">
           <img style="height: 45px;" src="images/ies.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="45">
+        </a>
+        <a target="_blank" href="https://vlsisocietyofindia.org/">
+          <img style="height: 45px;" src="images/vlsi-logo.webp" alt="logo" class="mb-1 mx-auto img-fluid" width="70" height="45">
         </a>
       </div>
     </div>
@@ -266,11 +269,13 @@
     <div class="marquee-content">
       <a href="https://cmt3.research.microsoft.com/ICE2CPT2025">Click Here for Paper Submission</a> 
         &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-        <a href="SSP.pdf">Click Here for Special Session Proposal</a>
+        <a href="Special Session Template.pdf">Click Here for Special Session Proposal</a>
         &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
         <a href="SSPT.docx">Click Here to download Special Session Template</a>
         &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-        <a href="Call for Papers ICE2CPT 2025.pdf">Click Here to Call for Papers Brochure </a>
+        <a href="CPICE2CPT.pdf">Click Here to Call for Papers Brochure </a>
+        &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+        <a href="venue.html">Click Here to view Key attraction at Jamshedpur </a>
     </div>
 </div>
 
